app/globals.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

body {
  background-image: linear-gradient(
      to top,
      rgba(0, 0, 0, 0.7),
      rgba(73, 73, 73, 0)
    ),
    url(https://static.vecteezy.com/system/resources/previews/014/062/899/original/endless-red-seamless-pattern-of-delicious-food-and-snack-items-icons-set-for-restaurant-bar-cafe-fast-food-cheat-meat-burger-pizza-hot-dog-sandwich-fruits-vegetables-the-background-vector.jpg);
  background-size: cover;
  height: 100vh;
}

button {
  background: rgb(255, 205, 0);
  border: black 1px solid;
  height: 2rem;
  border-radius: 5px;
  transition: all 0.3s;
}

button:hover {
  transition: ease-in-out 0.3s;
  filter: brightness(90%);
}

input,
select {
  height: 2rem;
  padding-left: 0.2rem;
  border-radius: 5px;
  border: 1px solid black;
  font-size: 1rem;
}

hr {
  color: white;
}

.App {
  max-width: 70rem;
  margin: 0 auto;
  padding-top: 5rem;
}

.container {
  display: flex;
}

.reservation-container {
  width: 20%;
  border-right: 0.1rem solid rgba(255, 255, 255, 0.548);
}

.reservation-header {
  font-size: 1.8rem;
  color: white;
  -webkit-text-stroke: 0.1rem black;
}

.reservation-cards-container {
  min-height: 35rem;
  overflow-x: scroll;
}

.reservation-card-container {
  max-height: 50vh;
  overflow-x: scroll;
}

.reservation-card-item {
  background-color: white;
  padding: 0.5rem 1rem;
  border-radius: 0.4rem;
  box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.171);
  width: 80%;
  margin: 1rem 0;
  display: flex;
  justify-content: space-between;
  cursor: pointer;
}

.reservation-card-item div {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.reservation-input-container {
  width: 80%;
  padding: 0.5rem 1rem;
  background: white;
  border-radius: 0.4rem;
  padding: 1rem 1rem;
  margin: 1rem 0;
}

.reservation-input-container input {
  width: 100%;
  margin: 0.2rem 0;
}

.reservation-input-container button {
  width: 100%;
  cursor: pointer;
}

.reservation-input-numbers {
  display: flex;
  gap: 0.5rem;
}

.reservation-input-numbers :first-child {
  width: 2.5rem;
}

.reservation-input-container button {
  margin: 0.2rem 0;
}

.customer-food-container {
  width: 80%;
  display: flex;
  flex-direction: column;
  max-height: 80vh;
  overflow-x: scroll;
}

.customer-food {
  display: flex;
  flex-direction: column;
  max-width: 80%;
  flex-wrap: wrap;
}

.customer-food-container p {
  margin-right: 1rem;
  font-weight: 200;
}

.customer-food-card-container {
  background-color: white;
  padding: 1.5rem 2rem;
  border-radius: 0.4rem;
  box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.171);
  width: 80%;
  margin: 1rem;
  height: fit-content;
}

.customer-food-card-customer-info {
  display: flex;
  justify-content: space-between;
}

.customer-food-card-subtotal {
  font-weight: 400;
  font-size: 1.3rem;
}

.customer-food-card-button {
  font-size: 1rem;
  background: none;
  border: none;
  cursor: pointer;
  height: fit-content;
}

.customer-food-name-container :last-child {
  font-size: 1.2rem;
}

.customer-food-select-container {
  display: flex;
  flex-direction: column;
  padding-bottom: 0.5rem;
}

.customer-food-select-container h4 {
  padding-bottom: 0.3rem;
}

.customer-food-select button {
  padding: 0 0.4rem;
  cursor: pointer;
}

.customer-foods-container {
  display: flex;
  width: 100%;
  margin-top: 1rem;
  justify-content: space-between;
}

